# arcana-world-2d

./: .gitignore  App.cpp  App.h  ArcanaWorld2D.vcxproj  CMakeLists.txt  README.md  app.ini  arcana-world-2d.sln  main.cpp
Manager/: Events.cpp  Events.h  Textures.cpp  Textures.h  Tiles.cpp  Tiles.h
Surface/: Camera.cpp  Camera.h  Surface.cpp  Surface.h
Surface/Entities/: Bat.cpp  Bat.h  Cactuser.cpp  Cactuser.h  Mag.cpp  Mag.h  Player.cpp  Player.h  Spider.cpp  Spider.h
Surface/Maps/: Map.cpp  Map.h
Surface/Screens/: OverScreen.cpp  OverScreen.h  PauseScreen.cpp  PauseScreen.h  StartScreen.cpp  StartScreen.h
Utility/: Config.cpp  Config.h
Utility/Base/: Entity.cpp  Entity.h  Screen.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Tile.cpp  Tile.h
Window/: Window.cpp  Window.h
assets/data/map/: 0.map  1_1.level  info.txt
